--- a/pcf_calculation/host/Cargo.toml
+++ b/pcf_calculation/host/Cargo.toml
@@ -9,3 +9,4 @@ risc0-zkvm = { version = "^2.0.2" }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+hex-literal = "0.3"
