--- a/pcf_calculation/methods/guest/Cargo.toml
+++ b/pcf_calculation/methods/guest/Cargo.toml
@@ -10,7 +10,10 @@ risc0-zkvm = { version = "^2.0.2", default-features = false, features = [
     'std',
 ] }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
-rsa = "0.9.6"
-sha2 = "0.10.8"
+rsa = "0.9"
+rand = "0.8"
+sha2 = "0.10"
+base64 = "0.21"
+pem = "1.0"
+pkcs1 = "0.7"
 serde_json = "1.0"
-hex = "0.4"
