--- a/pcf_calculation/host/Cargo.toml
+++ b/pcf_calculation/host/Cargo.toml
@@ -10,3 +10,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 hex-literal = "0.3"
+bincode = "1.3"
+
+anyhow = "1.0"
+hex = "0.4"
