--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -12,8 +12,8 @@ serde = "1.0"
 
 axum = "0.8.4"
 tokio = { version = "1.3.6", features = ["full"] }
-
-
+log = "0.4"
+env_logger = "0.10"
 # Tokio runtime for async
 serde_json = "1.0"
 
