--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 methods = { path = "../methods" }
+proving_service_core = { path = "../core" }
 risc0-zkvm = { version = "^2.0.0" }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde = "1.0"
