--- a/k8s/camunda-service.yaml
+++ b/k8s/camunda-service.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: camunda-service
-  namespace: proofing-system
+  namespace: proving-system
 spec:
   replicas: 1
   selector:
