Squashed 'camunda-service/' changes from 1d2dc2e..9826ec1
9826ec1  change namespace

git-subtree-dir: camunda-service
git-subtree-split: 9826ec19ac359b7b90f647a926297119727f5942

--- a/k8s/camunda-service.yaml
+++ b/k8s/camunda-service.yaml
@@ -21,7 +21,7 @@ spec:
          - containerPort: 8000
         env:
         - name: ZEEBE_ADDRESS
-          value: "camunda-zeebe-gateway.proofing-system.svc.cluster.local:26500" # host:port form, da  Zeebe gRPC erwartet nicht HTTP
+          value: "camunda-zeebe-gateway.proving-system.svc.cluster.local:26500" # host:port form, da  Zeebe gRPC erwartet nicht HTTP
         - name: PROOFING_SERVICE_API_URL
           value: "http://proofing-service:3000" #http connection
         - name: SENSOR_SERVICE_API_URL
