--- a/k8s/camunda-service.yaml
+++ b/k8s/camunda-service.yaml
@@ -13,6 +13,10 @@ spec:
       labels:
         app: camunda-service
     spec:
+      initContainers:
+          - name: wait-for-zeebe
+            image: busybox
+            command: ['sh', '-c', 'until nc -z camunda-zeebe-gateway 26500; do echo waiting for Zeebe...; sleep 2; done']
       containers:
       - name: camunda-service
         image: camunda-service:latest
@@ -21,7 +25,7 @@ spec:
          - containerPort: 8000
         env:
         - name: ZEEBE_ADDRESS
-          value: "camunda-zeebe-gateway.proving-system.svc.cluster.local:26500" # host:port form, da  Zeebe gRPC erwartet nicht HTTP
+          value: "camunda-zeebe-gateway:26500" # host:port form, da  Zeebe gRPC erwartet nicht HTTP
         - name: PROOFING_SERVICE_API_URL
           value: "http://proofing-service:3000" #http connection
         - name: SENSOR_SERVICE_API_URL
