--- a/k8s/proving-service.yaml
+++ b/k8s/proving-service.yaml
@@ -1,3 +1,4 @@
+        
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -19,4 +20,10 @@ spec:
           imagePullPolicy: Never
           ports:
             - containerPort: 3000
-          
+          env:
+            - name: KAFKA_BROKER
+              value: "kafka.proving-system.svc.cluster.local:9092"
+            - name: KAFKA_INPUT_TOPIC
+              value: "shipments"
+            - name: KAFKA_OUTPUT_TOPIC
+              value: "pcf_results"
