Added metrics - approch needs to be tested & developed further

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["host", "methods", "methods/guest", "core"]
+members = ["host", "methods", "methods/guest", "core", "metrics"]
 
 # Always optimize; building and running the guest takes much longer without optimization.
 [profile.dev]
