--- a/pcf_calculation/methods/guest/Cargo.toml
+++ b/pcf_calculation/methods/guest/Cargo.toml
@@ -6,9 +6,7 @@ edition = "2021"
 [workspace]
 
 [dependencies]
-risc0-zkvm = { version = "^2.0.2", default-features = false, features = [
-    'std',
-] }
+risc0-zkvm = {  version = "^2.0.2", default-features = false }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 rsa = "0.9"
 rand = "0.8"
@@ -19,3 +17,5 @@ pkcs1 = "0.7"
 serde_json = "1.0"
 const-oid = "0.9"
 digest = "0.10"
+#metrics = { path = "../../metrics" } 
+metrics = { path = "../../metrics", default-features = false, features = ["risc0-zkvm", "serde"] }
