--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -28,5 +28,8 @@ tracing = "0.1"
 
 rdkafka = { version = "0.29", features = ["cmake-build", "tokio"] }
 
+csv = { version = "1.3"}
+postcard = { version = "1.0", features = ["alloc"]}
+perf-event = { version = "0.4" }
 
 #features = ["tokio", "message"]
