--- a/pcf_calculation/host/Cargo.toml
+++ b/pcf_calculation/host/Cargo.toml
@@ -17,6 +17,15 @@ hex = "0.4"
 csv = "1.3"
 postcard = { version = "1.0", features = ["alloc"]}
 uuid = { version = "1.8.0", features = ["v4"] }
+rsa = "0.9"
+rand = "0.8"
+sha2 = "0.10"
+base64 = "0.21"
+pem = "1.0"
+pkcs1 = "0.7"
+const-oid = "0.9"
+digest = "0.10"
+
 
 [target.'cfg(target_os = "linux")'.dependencies]
 perf-event = { version = "0.4", optional = true }
