--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [build-dependencies]
-risc0-build = { version = "^2.0.1" }
 
 [dependencies]
+risc0-zkvm = { version = "^2.0.0" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
