--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -27,6 +27,12 @@ bincode = "1.3"
 tracing = "0.1"
 
 rdkafka = { version = "0.29", features = ["cmake-build", "tokio"] }
-
+rsa = "0.9"
+rand = "0.8"
+sha2 = "0.10"
+pem = "1.0"
+pkcs1 = "0.7"
+const-oid = "0.9"
+digest = "0.10"
 
 #features = ["tokio", "message"]
