--- a/pcf_calculation/methods/guest/Cargo.toml
+++ b/pcf_calculation/methods/guest/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2021"
 [dependencies]
 #risc0-zkvm = {  version = "2.0.2", default-features = false, features = ["std"] }
 risc0-zkvm = {  version = "2.0.2" }
-serde = { version = "1.0", default-features = false, features = ["derive"] }
+bincode = "1.3"
+serde = { version = "1.0", features = ["derive"] }
 rsa = "0.9"
 rand = "0.8"
 sha2 = "0.10"
@@ -18,8 +19,6 @@ pkcs1 = "0.7"
 serde_json = "1.0"
 const-oid = "0.9"
 digest = "0.10"
-bincode = { version = "1.3", optional = true }
-csv = { version = "1.3", optional = true }
 postcard = { version = "1.0", features = ["alloc"], optional = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
