--- a/host/docker-compose.yml
+++ b/host/docker-compose.yml
@@ -17,3 +17,6 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_MESSAGE_MAX_BYTES: 52428800 
+      KAFKA_REPLICA_FETCH_MAX_BYTES: 52428800
+      KAFKA_PRODUCER_MAX_REQUEST_SIZE: 52428800
