--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 [build-dependencies]
 
 [dependencies]
-risc0-zkvm = { version = "^2.0.0" }
+risc0-zkvm = { version = "2.1.0" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
