--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -36,5 +36,12 @@ pkcs1 = "0.7"
 const-oid = "0.9"
 digest = "0.10"
 serde_path_to_error = "0.1.17"
+chrono = "0.4"
+csv = "1.3.1"
+perf-event = "0.4"
+postcard = "1.1.2"
 
 #features = ["tokio", "message"]
+
+[dev-dependencies]
+lazy_static = "1.4"
