--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -28,10 +28,9 @@ anyhow = "1.0.98"
 tracing = "0.1"
 hex = "0.4"
 rdkafka = { version = "0.29", features = ["cmake-build", "tokio"] }
-rsa = "0.9"
+rsa = { version = "0.9.3", features = ["sha2", "pem"] }
 rand = "0.8"
 sha2 = "0.10"
-pem = "1.0"
 pkcs1 = "0.7"
 const-oid = "0.9"
 digest = "0.10"
