pull docker images from registry

--- a/k8s/proving-service.yaml
+++ b/k8s/proving-service.yaml
@@ -16,8 +16,8 @@ spec:
     spec:
       containers:
         - name: proving-service
-          image: proving-service:latest
-          imagePullPolicy: Never
+          image: ghcr.io/acp-pcvcf/proving-service:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 3000
           env:
